--- a/PDFs.ipynb
+++ b/PDFs.ipynb
@@ -12,7 +12,6 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.style\n",
     "from matplotlib import rc\n",
-    "#from scipy.interpolate import interp1d\n",
     "\n",
     "\n",
     "rc('text', usetex=True)\n",
@@ -43,8 +42,8 @@
     "\n",
     "##########################################################################\n",
     "# Stats\n",
+    "# Data is at z_enc/L_0 = 19, 20, and 21.\n",
     "\n",
-    "#S0 = Statistics(path+'1280x512x1280-S00/stats/pdftimes/avg18000-22000.nc')\n",
     "S0 = Statistics(path+'2496x512x2496-S00/stats/pdftimes/avg16000-21000.nc')\n",
     "S05 = Statistics(path+'1280x512x1280-S05/stats/pdftimes/avg22000-28000.nc')\n",
     "S10 = Statistics(path+'1280x512x1280-S10/stats/pdftimes/avg24000-32000.nc')\n",
@@ -102,7 +101,8 @@
     }
    ],
    "source": [
-    "# Pdf\n",
+    "# Pdfs\n",
+    "# Data is at z_enc/L_0 = 19, 20, and 21.\n",
     "\n",
     "S0_vortpdf = Pdfs([path+'2496x512x2496-S00/stats/pdfs/pdf16000.LnEnstrophyW_iW_i',\n",
     "                   path+'2496x512x2496-S00/stats/pdfs/pdf18000.LnEnstrophyW_iW_i',\n",
@@ -130,6 +130,7 @@
     "                   path+'2560x896x2560-S25/y.dat')\n",
     "\n",
     "# Create grid on which to interpolate pdfs\n",
+    "# Doesn't really matter which one is used, as long as it's the same in pdfs_saddle_point.ipynb\n",
     "\n",
     "S0_vortpdf_interp_data = Pdfs([path+'2496x512x2496-S00/stats/pdfs/pdf48000.LnEnstrophyW_iW_i'],path+'2496x512x2496-S00/y.dat')\n",
     "S05_vortpdf_interp_data = Pdfs([path+'1280x512x1280-S05/stats/pdfs/pdf57000.LnEnstrophyW_iW_i'],path+'1280x512x1280-S05/y.dat')\n",
