--- a/pdfs_saddle_point.ipynb
+++ b/pdfs_saddle_point.ipynb
@@ -25,7 +25,6 @@
     "\n",
     "opath = '/Volumes/Seagate/SCRATCH/plots/3D/Re025/Rapids/'\n",
     "\n",
-    "#path_S0    = '/Volumes/Seagate/SCRATCH/qCBL_3D/Re025/1280x512x1280-S00/'\n",
     "path_S0    = '/Volumes/Seagate/SCRATCH/qCBL_3D/Re025/2496x512x2496-S00/'\n",
     "path_S05   = '/Volumes/Seagate/SCRATCH/qCBL_3D/Re025/1280x512x1280-S05/'\n",
     "path_S10   = '/Volumes/Seagate/SCRATCH/qCBL_3D/Re025/1280x512x1280-S10/'\n",
@@ -78,6 +77,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Stats\n",
+    "# Data is at every one z_enc/L_0 from z_enc/L_0 = 15 to 30.\n",
+    "\n",
     "S0    = Statistics(path_S0+'stats/pdftimes/avg9500-53000.nc')\n",
     "S05   = Statistics(path_S05+'stats/pdftimes/avg12000-67000.nc')\n",
     "S10   = Statistics(path_S10+'stats/pdftimes/avg13000-84000.nc')\n",
@@ -219,7 +221,8 @@
     }
    ],
    "source": [
-    "# Pdf\n",
+    "# Pdfs\n",
+    "# Data is at every one z_enc/L_0 from z_enc/L_0 = 15 to 30.\n",
     "\n",
     "vortlist_S0 = [path_S0+'stats/pdfs/pdf9500.LnEnstrophyW_iW_i',\n",
     "               path_S0+'stats/pdfs/pdf11000.LnEnstrophyW_iW_i',\n",
@@ -359,6 +362,7 @@
    ],
    "source": [
     "# Create grid on which to interpolate pdfs\n",
+    "# Doesn't really matter which one is used, as long as it's the same in PDFs.ipynb\n",
     "\n",
     "S0_vortpdf_interp_data    = Pdfs([path_S0+'stats/pdfs/pdf48000.LnEnstrophyW_iW_i'],path_S0+'y.dat')\n",
     "S05_vortpdf_interp_data   = Pdfs([path_S05+'stats/pdfs/pdf57000.LnEnstrophyW_iW_i'],path_S05+'y.dat')\n",
